# pgen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release_pipeline.yml
data/: wordlist.txt
scripts/: local_release.sh
src/: main.rs
