[package]
name = "pgen"
version = "1.0.1"
edition = "2024"
authors = ["Devon Casey <me@devoncasey.com>"]
description = "A secure password generator using a list of words like that one xkcd comic."
license = "MIT"
repository = "https://github.com/DevonCasey/pgen"
keywords = ["password", "generator", "security"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.9.1"
clap = { version = "4.0", features = ["derive"] }

[package.metadata.generate-rpm]
license = "MIT"
summary = "A secure password generator using a list of words like that one xkcd comic."
assets = [
    { source = "target/release/pgen", dest = "/usr/bin/pgen", mode = "755" },
    { source = "data/wordlist.txt", dest = "/usr/share/pgen/wordlist.txt", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/pgen/README.md", mode = "644" },
]

[package.metadata.generate-rpm.requires]
glibc = "*"